# Flask-Oxide

./: .editorconfig  AGENTS.md  CODING_STYLE.md  FEATURES.md  README.md  STRUCTURE.md  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
flask_oxide/: DESIGN.md  __init__.py  builder.py  cli.py  config.py  exc.py  ext.py  observer.py  utils.py
